# badfmt

./: README.md  badfmt.py  pyproject.toml  vertfmt.py
.github/workflows/: python-package.yml  python-publish.yml
