[tool.poetry]
name = "badfmt"
version = "1.0.1"
description = "A very bad formatter for any programming language with braces and semicolons (eg. c/c++/java/javascript/rust)"
authors = ["infibrocco <infibrocco@github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/infibrocco/badfmt"
homepage = "https://github.com/infibrocco/badfmt"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/infibrocco/badfmt/issues"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
