[tool.poetry]
name = "vertfmt"
version = "1.0.1"
description = "A vertical formatter for any programming language with braces and semicolons (eg. c/c++/java/javascript/rust)"
authors = ["infibrocco <infibrocco@github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/infibrocco/vertfmt"
homepage = "https://github.com/infibrocco/vertfmt"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/infibrocco/vertfmt/issues"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
